TAP5-2809: Gradle project setup overhaul
Whole project setup was overhauled to address multiple issues:

- remove pre-Java 8 remnants
- inconsistent testing libraries
- outdated dependencies

The following changes where done:

- share most build-logic related concerns via Gradle conventions
- introduce Gradle version catalogue
- update dependencies where possible
- align versions throughout the submodules
- streamline testing setup
  - remove testng.xml if not necessary
  - prefer JUnit5 where possible
  - prefer parameterized Java tests over Spock